--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <!-- Bottom Header -->
     <div class="container-fluid bottom-header">
-      <div class="row grid">
-        <div class="col-md-5 col-sm-12 p-3 text-center grid">
+      <div class="row">
+        <div class="col-md-5 col-sm-12 p-3 text-center">
           <img src="logo/jtlogotrans.png" class="img-fluid" width="355px" height="130px">
         </div>
         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-6 col-xs-7 text-center custom-center">
@@ -48,7 +48,7 @@
         <button data-toggle="collapse" data-target="#navbarToggler" type="button" class="navbar-toggler"><span
             class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse" id="navbarToggler">
-          <ul class="navbar-nav custom-center grid">
+          <ul class="navbar-nav custom-center">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home </a>
             </li>
@@ -79,37 +79,38 @@
       </div>
       <div class="row">
         <div class="col-12">
-      <p>“A One-stop Shop for Metal Finishing”</p>
+          <p>“A One-stop Shop for Metal Finishing”</p>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-      <p>“Specializing in the supply and surface finishing of parts for the automotive sector in Pakistan”</p>
+          <p>“Specializing in the supply and surface finishing of parts for the automotive sector in Pakistan”</p>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-      <p>“We provide nickel, chrome and zinc plating finishes on new production steel parts.”</p>
+          <p>“We provide nickel, chrome and zinc plating finishes on new production steel parts.”</p>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-      <p>The problem we are tackling is effective classification of hand gesture images.</p>
+          <p>The problem we are tackling is effective classification of hand gesture images.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-      <p> “Our process and procedure controls guarantee plating excellence and further ensure the quality of your material.”</p>
+          <p> “Our process and procedure controls guarantee plating excellence and further ensure the quality of your
+            material.”</p>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-      <p> “We are dedicated to providing the customer with outstanding service, quality and on-time delivery.” </p>
+          <p> “We are dedicated to providing the customer with outstanding service, quality and on-time delivery.” </p>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-      <p> “We Offer Competitive Pricing” </p>
+          <p> “We Offer Competitive Pricing” </p>
         </div>
       </div>
     </div>
@@ -117,29 +118,29 @@
 
   <footer class="full-footer ">
     <div class="container-fluid top-footer">
-      <div class="row grid ">
-        <div class="col-md-3 text-center grid">
+      <div class="row">
+        <div class="col-md-3 text-center">
           <img src="logo/jtlogotrans.png" width="150" height="90" class="img-fluid p-md-1">
           <p>Jaffery Traders is a leading service provider of... <a href="index.html">read more</a></p>
           <!-- <a href="https://www.facebook.com/" class="p-1"></a>  -->
         </div>
-        <div class="col-md-6 custom-center grid">
-          <div class="row custom-center grid">
-            <div class="col-md-3 grid">
+        <div class="col-md-6 custom-center">
+          <div class="row custom-center">
+            <div class="col-md-3">
               <a href="index.html">Home</a>
             </div>
-            <div class="col-md-3 grid">
+            <div class="col-md-3">
               <a href="about.html">About</a>
             </div>
-            <div class="col-md-3 grid">
+            <div class="col-md-3">
               <a href="services.html">Services</a>
             </div>
-            <div class="col-md-3 grid">
+            <div class="col-md-3">
               <a href="clients.html">Clients</a>
             </div>
           </div>
         </div>
-        <div class="col-md-3 grid">
+        <div class="col-md-3">
           <a href="contact.html"><u>Contact Us</u></a><br>
           <a href="tel:+919876543210"><i class="fas fa-phone"></i> +(92) 987 654 3210</a><br>
           <a href="mailto:info@jafferytraders.com"><i class="far fa-envelope"></i> info@jafferytraders.com</a>
@@ -161,3 +162,5 @@
   </footer>
 
 </body>
+
+</html>
