--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,8 @@
                         </div>
                         <div class="form-row">
                             <div class="form_group col-md-12 text-center">
-                                <button type="submit" class="btn" style="background-color:#006650; color:#ACA271; font-weight: 550;">
+                                <button type="submit" class="btn"
+                                    style="background-color:#006650; color:#ACA271; font-weight: 550;">
                                     Send Message</i></button>
                             </div>
                         </div>
@@ -133,7 +134,10 @@
                         info@jafferytraders.com</a>
                     <h3 class="pb-2 pt-2">Address</h3>
                     <h4 class="ml-2">D/267 SITE, Karachi, Pakistan</h4>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d904.8286090877925!2d66.99413248810157!3d24.887253998997707!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDUzJzE0LjEiTiA2NsKwNTknNDAuOSJF!5e0!3m2!1sen!2sus!4v1585605269032!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d904.8286090877925!2d66.99413248810157!3d24.887253998997707!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDUzJzE0LjEiTiA2NsKwNTknNDAuOSJF!5e0!3m2!1sen!2sus!4v1585605269032!5m2!1sen!2sus"
+                        width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </div>
@@ -180,3 +184,5 @@
     </footer>
 
 </body>
+
+</html>
