made changes before hosting to jafferytraders.com

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container-fluid top-header">
       <div class="row">
         <div class="col-12 text-right">
-          <a class="p-1" href="tel:+919876543210"><i class="fas fa-phone"></i> +(92) 987 654 3210</a>
+          <a class="p-1" href="tel:"><i class="fas fa-phone"></i> +(92) 321 2436 774</a>
           <a class="p-1" href="mailto:info@jafferytraders.com"><i class="far fa-envelope"></i>
             info@jafferytraders.com</a>
         </div>
@@ -38,7 +38,7 @@
           <img src="logo/jtlogotrans.png" class="img-fluid" width="355px" height="130px">
         </div>
         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-6 col-xs-7 text-center custom-center">
-          <p>“A One-stop Shop for Metal Finishing”</p>
+          <p>“A one-stop shop for Metal Finishing”</p>
         </div>
       </div>
     </div>
@@ -72,43 +72,33 @@
 
   <section>
     <div class="container home-content">
-      <div class="row">
+      <div class="row banner">
         <div class="col-12">
-          <p>“A Precision Metal Finishing Company”</p>
+          <p>“We are a Precision Metal Finishing Company”</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row banner">
         <div class="col-12">
-          <p>“A One-stop Shop for Metal Finishing”</p>
+          <p>“We specialize in the supply and surface finishing of parts for the automotive sector in Pakistan”</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <p>“Specializing in the supply and surface finishing of parts for the automotive sector in Pakistan”</p>
-        </div>
-      </div>
-      <div class="row">
+      <div class="row banner">
         <div class="col-12">
           <p>“We provide nickel, chrome and zinc plating finishes on new production steel parts.”</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <p>The problem we are tackling is effective classification of hand gesture images.</p>
-        </div>
-      </div>
-      <div class="row">
+      <div class="row banner">
         <div class="col-12">
           <p> “Our process and procedure controls guarantee plating excellence and further ensure the quality of your
             material.”</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row banner">
         <div class="col-12">
           <p> “We are dedicated to providing the customer with outstanding service, quality and on-time delivery.” </p>
         </div>
       </div>
-      <div class="row">
+      <div class="row banner">
         <div class="col-12">
           <p> “We Offer Competitive Pricing” </p>
         </div>
@@ -125,7 +115,7 @@
           <!-- <a href="https://www.facebook.com/" class="p-1"></a>  -->
         </div>
         <div class="col-md-6 custom-center">
-          <div class="row custom-center">
+          <div class="row custom-center top-footer-nav">
             <div class="col-md-3">
               <a href="index.html">Home</a>
             </div>
@@ -140,9 +130,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 top-footer-contactus">
           <a href="contact.html"><u>Contact Us</u></a><br>
-          <a href="tel:+919876543210"><i class="fas fa-phone"></i> +(92) 987 654 3210</a><br>
+          <a href="tel:+919876543210"><i class="fas fa-phone"></i> +(92) 321 2436 774</a><br>
           <a href="mailto:info@jafferytraders.com"><i class="far fa-envelope"></i> info@jafferytraders.com</a>
           <!-- <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item"
