--- a/clients.html
+++ b/clients.html
@@ -87,7 +87,7 @@
         </div>
     </section>
     <section>
-        <div class="container content">
+        <!-- <div class="container content">
             <div class="row p-5">
                 <div class="col-md-4">
                     <img src="clients/agriauto.png" width="260" height="90" class="img-fluid p-md-1">
@@ -126,7 +126,7 @@
                     <img src="clients/se.png" width="260" height="90" class="img-fluid p-md-1">
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <footer class="full-footer ">
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-md-3 pt-3">
                     <a href="contact.html">Contact Us</a><br>
-                    <a href="tel:+919876543210"><i class="fas fa-phone"></i> +(92) 987 654 3210</a><br>
+                    <a href="tel:+919876543210"><i class="fas fa-phone"></i> +(92) 321 2436 774</a><br>
                     <a href="mailto:info@jafferytraders.com"><i class="far fa-envelope"></i> info@jafferytraders.com</a>
                     <!-- <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item"
@@ -174,6 +174,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
