update year content and also fixed footer to bottom

--- a/about.html
+++ b/about.html
@@ -97,8 +97,8 @@
                         is a
                         leading supplier of electro-plating and surface finishing services to various industries. Our
                         experience
-                        in this field exceeds well over XX years. <br><br>
-                        Jaffery Traders was founded in 200X and was originally a sister company of Azhad Industries Co.
+                        in this field exceeds well over 15 years. <br><br>
+                        Jaffery Traders was founded in 2003 and was originally a sister company of Azhad Industries Co.
                         LLC
                         based in Dubai, UAE. Since formation, Jaffery Traders has become the leading supplier of
                         electro-plating
@@ -114,7 +114,7 @@
             </div>
         </div>
     </section>
-  <footer class="full-footer ">
+  <footer class="full-footer fixed-bottom">
     <div class="container-fluid top-footer">
       <div class="row">
         <div class="col-md-3 text-center">
