--- a/clients.html
+++ b/clients.html
@@ -129,7 +129,7 @@
         </div> -->
     </section>
 
-    <footer class="full-footer ">
+    <footer class="full-footer fixed-bottom">
         <div class="container-fluid top-footer">
             <div class="row">
                 <div class="col-md-3 text-center">
