Added Products Page

--- a/contact.html
+++ b/contact.html
@@ -50,21 +50,24 @@
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav custom-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home </a>
+                          <a class="nav-link" href="index.html">Home </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                          <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="services.html">Services</a>
+                          <a class="nav-link" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="clients.html">Clients</a>
+                          <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                          <a class="nav-link" href="clients.html">Clients</a>
                         </li>
-                    </ul>
+                        <li class="nav-item">
+                          <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                      </ul>
                 </div>
             </nav>
         </div>
