--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="clients.html">Clients</a>
             </li>
             <li class="nav-item">
